Fixed component name text wrap issue

--- a/src/site/shared/containers/ItemNav/index.scss
+++ b/src/site/shared/containers/ItemNav/index.scss
@@ -43,7 +43,7 @@ $tab-padding: 8px;
         font-weight: bold;
 
         width: calc(49% - 5px);
-        padding: 1vh 1vh 1vh 1vh;
+        padding: 10px 10px 10px 10px;
 
         cursor: pointer;
         transition: 0.3s;
